objects/OF_Configurazioni__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DataSwitchOM__c</fullName>
        <label>Data Switch OM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Attiva_Check_POP_OLO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifica se utilizzare o meno il cruscotto per controllare quali devono andare su OM e quali no. Se false vanno tutte su OM</description>
        <inlineHelpText>Identifica se utilizzare o meno il cruscotto per controllare quali devono andare su OM e quali no. Se false vanno tutte su OM</inlineHelpText>
        <label>Attiva Check POP/OLO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Operatore_OLO__c</fullName>
        <description>Inserire i codici operatori da inviare ad om separati da &quot;;&quot; (punto e virgola),senza spazi: es &quot;WN;VF;TIS&quot;</description>
        <inlineHelpText>Inserire i codici operatori da inviare ad om separati da &quot;;&quot; (punto e virgola),senza spazi: es &quot;WN;VF;TIS&quot;</inlineHelpText>
        <label>Codice Operatore OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Pop_OM__c</fullName>
        <description>Inserire le GPON da inviare ad om separate da &quot;;&quot; (punto e virgola),senza spazi: es &quot;PG_01;RM_01;MI_01&quot;</description>
        <inlineHelpText>Inserire le GPON da inviare ad om separate da &quot;;&quot; (punto e virgola),senza spazi: es &quot;PG_01;RM_01;MI_01&quot;</inlineHelpText>
        <label>Pop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_DataSwitchTTM__c</fullName>
        <defaultValue>DATE(2018,06,14)</defaultValue>
        <label>OF_DataSwitchTTM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_ServizioExtraName__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OF_ServizioExtraName</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OF_TT_CodOpOLOSuTTM__c</fullName>
        <label>CodOpOLOSuTTM</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TT_TuttoSuTTM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TuttoSuTTM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_checkTrueVaiSuOM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>se TRUE i POP e gli OLO inseriti nel cruscotto identificano i POP e gli OLO che andranno verso OM (logica includente). Se la checkbox è FALSE i POP e gli OLO inseriti nel cruscotto identificano i POP e gli OLO che NON andranno verso OM (logica escludente)</inlineHelpText>
        <label>check True vai su OM</label>
        <type>Checkbox</type>
    </fields>
    <label>Configurazioni</label>
</CustomObject>